--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,35 +4,22 @@
     package="com.nothinglin.guiguchat"
     android:versionCode="100"
     android:versionName="1.0.0">
-
-    <!--  环信通信的一些权限  -->
+    <!-- 环信通信的一些权限 -->
     <!-- IM SDK required start -->
     <!-- 允许程序振动，用于本地通知设置振动 -->
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <!-- 访问网络权限 -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- 麦克风权限，用于语音消息时录制语音，不使用录制语音可以移除 -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- 相机权限，用于图片消息时拍摄图片，不使用拍照可以移除 -->
-    <uses-permission android:name="android.permission.CAMERA" />
-    <!-- 获取运营商信息，用于获取网络状态 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 写入扩展存储权限，用于附件等的存储 -->
+    <uses-permission android:name="android.permission.VIBRATE" /> <!-- 访问网络权限 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 麦克风权限，用于语音消息时录制语音，不使用录制语音可以移除 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 相机权限，用于图片消息时拍摄图片，不使用拍照可以移除 -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 获取运营商信息，用于获取网络状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 写入扩展存储权限，用于附件等的存储 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- 访问 GPS 定位，用于定位消息，如果不用定位相关可以移除 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 访问 GPS 定位，用于定位消息，如果不用定位相关可以移除 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- api 21 后被标记为 deprecated，可以移除 -->
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <!-- 允许程序在手机屏幕关闭后后台进程仍然运行 -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!-- 允许程序开机自动运行，SDK 保活时使用，如果使用厂商推送，可以移除 -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <!-- 申请闹钟定时权限 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- api 21 后被标记为 deprecated，可以移除 -->
+    <uses-permission android:name="android.permission.GET_TASKS" /> <!-- 允许程序在手机屏幕关闭后后台进程仍然运行 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 允许程序开机自动运行，SDK 保活时使用，如果使用厂商推送，可以移除 -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> <!-- 申请闹钟定时权限 -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-
-
 
     <application
         android:name=".IMApplication"
@@ -45,8 +32,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GuiguChat"
         tools:targetApi="31">
-
-        <!--    项目的启动界面    -->
+        <activity
+            android:name=".LaunchActivity"
+            android:exported="false" />
+        <!-- 项目的启动界面 -->
         <activity
             android:name=".controller.activity.MainActivity"
             android:exported="true">
@@ -55,28 +44,23 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-
-        <!--   设置环信应用的Appkey     -->
+        </activity> <!-- 设置环信应用的Appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="1157220719125332#nothingteamchat"></meta-data>
-
-        <!-- 声明 SDK 所需的 service 的核心功能-->
+            android:value="1157220719125332#nothingteamchat" /> <!-- 声明 SDK 所需的 service 的核心功能 -->
         <service
             android:name="com.hyphenate.chat.EMChatService"
             android:exported="true" />
         <service
             android:name="com.hyphenate.chat.EMJobService"
             android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
-        <!-- 声明 SDK 所需的 receiver -->
+            android:permission="android.permission.BIND_JOB_SERVICE" /> <!-- 声明 SDK 所需的 receiver -->
         <receiver
             android:name="com.hyphenate.chat.EMMonitorReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
                 <data android:scheme="package" />
             </intent-filter>
             <!-- 可选 filter -->
@@ -85,8 +69,6 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
-
-
     </application>
 
 </manifest>
