--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,18 +33,29 @@
         android:theme="@style/Theme.GuiguChat"
         tools:targetApi="31">
         <activity
-            android:name=".LaunchActivity"
+            android:name=".LoginActivity"
             android:exported="false" />
         <!-- 项目的启动界面 -->
         <activity
-            android:name=".controller.activity.MainActivity"
+            android:name=".controller.activity.LaunchActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- 设置环信应用的Appkey -->
+        </activity>
+
+        <!-- 界面注册  必须注册才能运行界面 -->
+        <activity
+            android:name=".controller.activity.MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".controller.activity.LoginActivity"
+            android:exported="true" />
+
+
+        <!-- 设置环信应用的Appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
             android:value="1157220719125332#nothingteamchat" /> <!-- 声明 SDK 所需的 service 的核心功能 -->
